<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <group>
        <item
            android:id="@+id/Profile_Item_id"
            android:icon="@drawable/ic_account_circle"
            android:title="@string/profile_item"

            />
        <item
            android:id="@+id/Magazine_Item_id"
            android:icon="@drawable/ic_magazine"
            android:title="@string/magazine_item" />
        <item
            android:id="@+id/Market_Place_Item_id"
            android:icon="@drawable/ic_market"
            android:title="@string/marketplace_item" />
    </group>
    <group>
        <item
            android:id="@+id/about_us"
            android:icon="@drawable/ic_about_us"
            android:title="@string/about_item" />
        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_exit"
            android:title="@string/logout_item" />
    </group>


</menu>