<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context="com.creation.hollarena.UsersInfo.navigationdrawer.magazine.CheckAge">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_catagories"
        android:layout_marginLeft="20dp"
        android:textSize="20dp"
        android:layout_marginTop="15dp"
        android:id="@+id/tv_categories"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        android:layout_height="wrap_content"
        android:background="#efeeee"
        android:layout_below="@+id/tv_categories"
        android:layout_centerHorizontal="true"
        android:id="@+id/rlcategories">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/rlbk"
            android:background="@drawable/rounded_corner"
            android:layout_marginLeft="17dp"
            android:layout_marginStart="17dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_cat_books"
                android:paddingRight="10dp"
                android:paddingTop="12dp"
                android:id="@+id/tv_cat_books"
                android:paddingBottom="12dp"
                android:paddingLeft="25dp"
                android:textColor="@color/black"
                android:textSize="16dp"
                />

            <ImageView
                android:layout_marginRight="15dp"
                android:layout_toRightOf="@+id/tv_cat_books"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/ic_done_white" />

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/rl_politics"
            android:background="@drawable/rounded_corner"
            android:layout_marginRight="17dp"
            android:layout_marginEnd="17dp"
            android:layout_alignTop="@+id/rlbk"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_cat_politics"
                android:paddingRight="10dp"
                android:paddingTop="12dp"
                android:id="@+id/tv_cat_politics"
                android:paddingBottom="12dp"
                android:paddingLeft="25dp"
                android:textColor="@color/black"
                android:textSize="16dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <ImageView
                android:layout_marginRight="15dp"
                android:layout_toRightOf="@+id/tv_cat_politics"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/ic_done_white"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/rl_sports"
            android:background="@drawable/rounded_corner"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="20dp"
            android:layout_below="@+id/rlbk"
            android:layout_alignLeft="@+id/rlbk"
            android:layout_alignStart="@+id/rlbk">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_cat_sports"
                android:paddingRight="10dp"
                android:paddingTop="12dp"
                android:id="@+id/tv_cat_sports"
                android:paddingBottom="12dp"
                android:paddingLeft="25dp"
                android:textColor="@color/black"
                android:textSize="16dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <ImageView
                android:layout_marginRight="15dp"
                android:layout_toRightOf="@+id/tv_cat_sports"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/ic_done_white"
                />
        </RelativeLayout>
        <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/rl_fation"
            android:background="@drawable/rounded_corner"
            android:layout_alignBaseline="@+id/rl_sports"
            android:layout_alignBottom="@+id/rl_sports"
            android:layout_alignRight="@+id/rl_politics"
            android:layout_alignEnd="@+id/rl_politics">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_cat_fation"
            android:paddingRight="10dp"
            android:paddingTop="12dp"
            android:id="@+id/tv_cat_fation"
            android:paddingBottom="12dp"
            android:paddingLeft="25dp"
            android:textColor="@color/black"
            android:textSize="16dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <ImageView
            android:layout_marginRight="15dp"
            android:layout_toRightOf="@+id/tv_cat_fation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/ic_done_white"
            />
    </RelativeLayout>

    </RelativeLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_upgrade"
        android:id="@+id/tv_upgrade"
        android:layout_below="@+id/rlcategories"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:textSize="20dp"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="13dp"
        android:layout_height="wrap_content"
        android:background="#efeeee"
        android:layout_below="@+id/tv_upgrade"
        android:layout_centerHorizontal="true"
        android:id="@+id/rlupgrade">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="7dp"
            android:layout_marginBottom="7dp"
            android:background="@drawable/rounded_corner"
            android:text="@string/tv_pay_stock"
            android:paddingLeft="20dp"
            android:id="@+id/btn_upgrade"
            android:paddingRight="20dp"
            />
        </RelativeLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rlupgrade"
        android:text="@string/tv_cond"
        android:textSize="23dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="23dp"
        android:gravity="center"
        android:id="@+id/tv_cond"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_yes"
        android:layout_below="@+id/tv_cond"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="17dp"
        android:id="@+id/btn_yes"
        android:background="@drawable/rounded_corner"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_no"
        android:background="@drawable/rounded_corner"
        android:layout_alignBaseline="@+id/btn_yes"
        android:layout_alignBottom="@+id/btn_yes"
        android:layout_toRightOf="@+id/tv_upgrade"
        android:layout_toEndOf="@+id/tv_upgrade"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        android:id="@+id/btn_no"/>
</RelativeLayout>
